# benchmarker

./: compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_FIX.md  SCHEMAS.md  demo_comparison.sh  reset_db.sh
backend/migrations/: 20260126000000_init.sql  20260126_init.sql
backend/src/: compare.rs  db.rs  main.rs  models.rs  routes.rs  schemas.rs
backend/src/routes/: about.rs  categories.rs  mod.rs  products.rs
backend/src/schemas/: schemas.yml
db/: compose.yml
frontend/: compare.html  compare.js  index.html  kategorie.html  koupelna.html  kuchyn.html  mikrovlnky.html  o-projektu.html  pracky.html  script.js  style.css
